--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="pag-01.html">Aula 01</a></li>
+                <li><a href="/Aula01/pag-01.html">Aula 01</a></li>
             </ul>
 
         </div>
